# FCC-Broadcast-Ad-Prediction

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
scripts/: seed_operator_csv.py  validate_against_10k.py
src/fcc_ad_tracker/: __init__.py  __main__.py  cli.py
src/fcc_ad_tracker/config/: __init__.py  settings.py
src/fcc_ad_tracker/core/: __init__.py  db.py  exceptions.py  models.py
src/fcc_ad_tracker/stage1_stations/: __init__.py  enumerator.py  lms_parser.py  operator_map.py
src/fcc_ad_tracker/stage2_crawler/: __init__.py  browser.py  crawler.py  opif_client.py
src/fcc_ad_tracker/stage3_pdf/: __init__.py  downloader.py  ocr.py  pipeline.py  preprocess.py  text_extract.py
src/fcc_ad_tracker/stage4_llm/: __init__.py  client.py  extractor.py  prompts.py  schemas.py
src/fcc_ad_tracker/stage5_model/: __init__.py  aggregator.py  coverage.py  cycle_compare.py  excel_writer.py  race_overlay.py  velocity.py
src/fcc_ad_tracker/utils/: __init__.py  dates.py  logging.py  rate_limiter.py
static/: operator_stations.csv
tests/: conftest.py  test_cli.py  test_db.py  test_integration.py  test_stage1_stations.py  test_stage2_crawler.py  test_stage3_pdf.py  test_stage4_llm.py  test_stage5_model.py
tests/fixtures/: sample_opif_response.json  sample_stations.json
